# poc-applied-ai

./: .env.example  .gitignore  applied_diploma_ai_ml.txt  applied_roots.txt  docker-compose.yml
.kiro/specs/course-navigation-restructure/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/learning-platform/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/progress-tracking/: .config.kiro  design.md  requirements.md  tasks.md
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_lecture_progress_table.py
backend/app/: config.py  db.py  main.py
backend/app/models/: __init__.py  colab_mapping.py  course.py  last_viewed.py  lecture.py  lecture_progress.py  module.py  playback_position.py  section.py
backend/app/routers/: __init__.py  courses.py  lectures.py  progress.py
backend/app/schemas/: __init__.py  content.py  course.py  lecture.py  progress.py
backend/app/services/: colab_integration.py  content_resolver.py  progress_service.py  tree_parser.py
backend/app/utils/: __init__.py  docx_renderer.py  path_security.py
backend/tests/: test_properties_content_type.py  test_properties_tree_parsing.py  test_seed_database.py  test_tree_parser.py
data/: applied_roots.txt
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts  progress.ts
frontend/src/components/: HtmlContent.tsx  (+7 more)
scripts/: seed_db.py  upload_notebooks.py
(+11 files in other folders)
